Fix three minor build and CI issues
- Use --release 17 instead of -source 17 -target 17 in javacOptions;
  --release also restricts the API set to JDK 17, catching accidental
  use of newer APIs at compile time
- Remove --add-opens from @Fork jvmArgsAppend in benchmark classes;
  build.sbt's Jmh/javaOptions already passes them to the forked JVM
- Add missing trailing newline to CI.yml